基本完成方舟数据查询概览页面UI设计

--- a/src/common/font/font.css
+++ b/src/common/font/font.css
@@ -16,3 +16,9 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: "NewFontXingshu_2";
+    src: url('No.130-ShangShouZhuiGuangShouXieTi-2.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
